--- a/H1.html
+++ b/H1.html
@@ -13,7 +13,7 @@
      <ul class="nav-bar">
           <li class="nav-button-home"><a href="H1.html">Home</a></li>
           <li class="nav-button-services"><a href="https://www.titan22.com/">Shops</a></li>
-          <li class="nav-button-products"><a href="index.html">Sign-Up</a></li>
+          <li class="nav-button-products"><a href="sign up.html">Sign-Up</a></li>
      </ul>
 	</nav>
 	<header>
